--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js rg-html rg-gradient" lang="US_en">
 
 <head>
   <meta charset="utf-8">
-  <title></title>
-  <meta name="description" content="">
+  <title>RGProgra</title>
+  <meta name="description" content="Software Company">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
+  <meta property="og:title" content="RGProgra">
+  <meta property="og:type" content="Software Company">
+  <meta property="og:url" content="https://rgprogra.com">
+  <meta property="og:image" content="img/rg-logo-simple.svg">
 
   <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
+  <link rel="apple-touch-icon" href="apple-touch-icon.png">
+  <link rel="icon" href="img/rg-logo-simple.svg" type="image/svg+xml">
   <!-- Place favicon.ico in the root directory -->
 
   <link rel="stylesheet" href="css/normalize.css">
@@ -22,10 +23,59 @@
   <meta name="theme-color" content="#fafafa">
 </head>
 
-<body>
+<body class="rg-gradient rg-body">
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <div class="container">
+    <div class="row">
+      <div class="rg-logo-container">
+        <div class="rg-logo">
+          <svg id="rg-logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 400">
+            <path id="a" d="M327.6,306.3a13.3,13.3,0,0,1-7.6-7.6,14.3,14.3,0,0,1,0-11,13.1,13.1,0,0,1,3-4.6,15.5,15.5,0,0,1,4.6-3.1,13.2,13.2,0,0,1,5.5-1.1,12.9,12.9,0,0,1,5.5,1.1,13.8,13.8,0,0,1,4.6,3.1,13.1,13.1,0,0,1,3,4.6,12.6,12.6,0,0,1,1.1,5.5v10.9a3.2,3.2,0,0,1-.9,2.3,3.3,3.3,0,0,1-4.3.4,3,3,0,0,1-1.2-1.7,13.6,13.6,0,0,1-7.8,2.4A13.3,13.3,0,0,1,327.6,306.3Zm8.5-5.9a8.5,8.5,0,0,0,2.5-1.7,8.2,8.2,0,0,0,1.6-2.5,8,8,0,0,0,.6-3,7.3,7.3,0,0,0-.6-3,8.2,8.2,0,0,0-1.6-2.5,7.2,7.2,0,0,0-2.5-1.6,7.7,7.7,0,0,0-3-.6,10.5,10.5,0,0,0-3,.5,10.1,10.1,0,0,0-2.5,1.7,8.2,8.2,0,0,0-1.6,2.5,7.3,7.3,0,0,0-.6,3,8,8,0,0,0,.6,3,8.2,8.2,0,0,0,1.6,2.5,8.5,8.5,0,0,0,2.5,1.7,7.3,7.3,0,0,0,3,.6A8,8,0,0,0,336.1,300.4Z" fill="#05f2f2"/>
+            <path id="r-3" d="M273,306.2a3.3,3.3,0,0,1-1-2.3v-10a14.3,14.3,0,0,1,1.2-5.8,15.8,15.8,0,0,1,3.3-4.8,13.7,13.7,0,0,1,4.8-3.3,15.6,15.6,0,0,1,5.7-1.1h.1a3.2,3.2,0,0,1,2.4.9,3,3,0,0,1,.9,2.3,5.9,5.9,0,0,1-.2,1.3,3.2,3.2,0,0,1-3.1,1.9h-.2a10.8,10.8,0,0,0-3.1.7,8,8,0,0,0-2.7,1.8,10.1,10.1,0,0,0-1.9,2.7,10.7,10.7,0,0,0-.7,3.2v10.2a3.2,3.2,0,0,1-.9,2.3l-1,.7a2.5,2.5,0,0,1-1.2.2A3.6,3.6,0,0,1,273,306.2Z" fill="#05f2f2"/>
+            <path id="g-2" d="M218.6,319.4a2.7,2.7,0,0,1-1.1-2.3,3.8,3.8,0,0,1,1.4-2.6,9.7,9.7,0,0,1,3.5-1.9l2.7-.5h3.1c2.3,0,3.9-.3,4.9-1a2.5,2.5,0,0,0,1.1-1.2,4.8,4.8,0,0,0,.4-1.8,4.6,4.6,0,0,0-.2-1.4l-.6-1a14.8,14.8,0,0,1-7.1,1.9,14.6,14.6,0,0,1-5.5-1.1,17.7,17.7,0,0,1-4.6-3.1,16.2,16.2,0,0,1-3.1-4.6,14.3,14.3,0,0,1,0-11,14.9,14.9,0,0,1,3.1-4.6,13.8,13.8,0,0,1,4.6-3.1,14.3,14.3,0,0,1,11,0,13.3,13.3,0,0,1,4.6,3.1,14.9,14.9,0,0,1,3.1,4.6,14.6,14.6,0,0,1,1.1,5.5,13.6,13.6,0,0,1-2.4,7.8c1.6,1.6,2.4,4,2.4,7a11.1,11.1,0,0,1-.9,4.6,10,10,0,0,1-2.4,3.3,8.8,8.8,0,0,1-3.4,1.9,10.9,10.9,0,0,1-4,.7h-3.5a6.4,6.4,0,0,0-2,.3,5.4,5.4,0,0,0-1.9,1.1,3.4,3.4,0,0,1-1.9.7A3.7,3.7,0,0,1,218.6,319.4Zm11.1-19a7.4,7.4,0,0,0,2.5-1.7,7,7,0,0,0,1.7-2.5,8,8,0,0,0,.6-3,7.3,7.3,0,0,0-.6-3,8.5,8.5,0,0,0-1.7-2.5,7.2,7.2,0,0,0-2.5-1.6,7.3,7.3,0,0,0-3-.6,8,8,0,0,0-3,.6,8.2,8.2,0,0,0-2.5,1.6,8.5,8.5,0,0,0-1.7,2.5,7.3,7.3,0,0,0-.6,3,8,8,0,0,0,.6,3,8.5,8.5,0,0,0,1.7,2.5,10.1,10.1,0,0,0,2.5,1.7,8,8,0,0,0,3,.6A7.3,7.3,0,0,0,229.7,300.4Z" fill="#05f2f2"/>
+            <g id="o">
+              <path d="M200,101a15.5,15.5,0,1,0,15.5,15.5A15.4,15.4,0,0,0,200,101Zm0,24a8.5,8.5,0,1,1,8.5-8.5A8.5,8.5,0,0,1,200,125Z" fill="#bf0426"/>
+            </g>
+            <path id="r-2" d="M112.5,306.2a3.3,3.3,0,0,1-1-2.3v-10a14.3,14.3,0,0,1,1.2-5.8,15.8,15.8,0,0,1,3.3-4.8,13.7,13.7,0,0,1,4.8-3.3,15.6,15.6,0,0,1,5.7-1.1h.1a3.2,3.2,0,0,1,2.4.9,3,3,0,0,1,.9,2.3,5.9,5.9,0,0,1-.2,1.3,3.2,3.2,0,0,1-3.1,1.9h-.2a10.8,10.8,0,0,0-3.1.7,8,8,0,0,0-2.7,1.8,10.1,10.1,0,0,0-1.9,2.7,10.7,10.7,0,0,0-.7,3.2v10.2a3.2,3.2,0,0,1-.9,2.3l-1,.7a2.5,2.5,0,0,1-1.2.2A3.6,3.6,0,0,1,112.5,306.2Z" fill="#05f2f2"/>
+            <path id="p" d="M53.6,316.3a4.1,4.1,0,0,1-.7-1.1,3.1,3.1,0,0,1-.3-1.3V293.2a14.6,14.6,0,0,1,1.1-5.5,14.9,14.9,0,0,1,3.1-4.6,13.8,13.8,0,0,1,4.6-3.1,13.2,13.2,0,0,1,5.5-1.1,12.6,12.6,0,0,1,5.5,1.1,14.5,14.5,0,0,1,7.7,7.7,14.3,14.3,0,0,1,0,11,15.5,15.5,0,0,1-3.1,4.6,13.1,13.1,0,0,1-4.6,3,12.6,12.6,0,0,1-5.5,1.2,13.8,13.8,0,0,1-7.8-2.4v8.8a3.6,3.6,0,0,1-.8,2.4,3,3,0,0,1-2.4,1A3.3,3.3,0,0,1,53.6,316.3Zm16.3-15.9a7.4,7.4,0,0,0,2.5-1.7,7,7,0,0,0,1.7-2.5,8,8,0,0,0,.6-3,7.3,7.3,0,0,0-.6-3,7,7,0,0,0-1.7-2.5,7.8,7.8,0,0,0-2.4-1.6,8.1,8.1,0,0,0-3.1-.6,8,8,0,0,0-3,.6,8.2,8.2,0,0,0-2.5,1.6,8.5,8.5,0,0,0-1.7,2.5,7.3,7.3,0,0,0-.6,3,8,8,0,0,0,.6,3,8.5,8.5,0,0,0,1.7,2.5,10.1,10.1,0,0,0,2.5,1.7,8,8,0,0,0,3,.6A7.3,7.3,0,0,0,69.9,300.4Z" fill="#05f2f2"/>
+            <path id="g-1-2" d="M267.6,198.2H247.2a8,8,0,0,0,0,16h20.4a8,8,0,0,0,0-16Z" fill="#bf0426"/>
+            <path id="g-1-1" d="M269.2,229.7l17.8,5.9a47.4,47.4,0,0,1-8.6,9.9,50,50,0,0,1-10.6,7.6,44.5,44.5,0,0,1-12.1,4.9,49.2,49.2,0,0,1-13.4,1.7c-14.8,0-27.3-5.4-37.7-15.8s-15.8-22.9-15.8-37.7a50.8,50.8,0,0,1,15.8-37.7c10.3-10.6,22.9-15.8,37.7-15.8a52.7,52.7,0,0,1,20.9,4.1,41.4,41.4,0,0,1,9.4,5.3c7.5,6,1.1,12.8,1.1,12.8s-5.4,6.3-12.7.9c-5.2-3.8-11.7-5.2-18.7-5.2a35.6,35.6,0,1,0,0,71.2,35.1,35.1,0,0,0,26.9-12.1Z" fill="#05dbf2"/>
+            <path id="r-1" d="M120.9,208.6a33.6,33.6,0,0,1-6.3-20.1,35.5,35.5,0,0,1,35.6-35.6h31.5l1.5.3a6.4,6.4,0,0,1,1.9.8,9.4,9.4,0,0,1,.6,15.4,5.4,5.4,0,0,1-2,1l-1.5.4h-32a17.1,17.1,0,0,0-12.5,5.2,16.6,16.6,0,0,0-5.3,12.5,17.1,17.1,0,0,0,5.3,12.7,17.5,17.5,0,0,0,12.5,5.2l15.9-.2-31,53.7H114.6l21.9-38.4A34.1,34.1,0,0,1,120.9,208.6Z" fill="#05dbf2"/>
+            <path id="circle" d="M167.8,306.4a14.9,14.9,0,0,1-4.6-3.1,14.3,14.3,0,0,1-3.1-15.6,14.5,14.5,0,0,1,7.7-7.7,12.4,12.4,0,0,1,5.4-1.1,13.3,13.3,0,0,1,5.6,1.1,15.5,15.5,0,0,1,4.6,3.1,13.1,13.1,0,0,1,3,4.6,14.3,14.3,0,0,1,0,11,13.3,13.3,0,0,1-7.6,7.6,13.4,13.4,0,0,1-5.6,1.2A14.1,14.1,0,0,1,167.8,306.4Zm8.5-6a8.1,8.1,0,0,0,4.2-4.2,10.5,10.5,0,0,0,.5-3,7.3,7.3,0,0,0-.6-3,7.7,7.7,0,0,0-7.2-4.7,8.2,8.2,0,0,0-5.4,2.2,7,7,0,0,0-1.7,2.5,7.3,7.3,0,0,0-.6,3,8,8,0,0,0,.6,3,7,7,0,0,0,1.7,2.5,7.4,7.4,0,0,0,2.5,1.7,7.2,7.2,0,0,0,2.9.6A8.1,8.1,0,0,0,176.3,300.4Z" fill="#bf0426"/>
+          </svg>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <!-- Begin Mailchimp Signup Form -->
+<!--      <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">-->
+<!--      <style type="text/css">-->
+<!--        #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif;  width:360px;}-->
+<!--        /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.-->
+<!--           We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */-->
+<!--      </style>-->
+<!--      <div id="mc_embed_signup">-->
+<!--        <form action="https://rgprogra.us1.list-manage.com/subscribe/post?u=5548f33a5336fa3c78babf936&amp;id=842fad5263" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>-->
+<!--          <div id="mc_embed_signup_scroll">-->
+
+<!--            <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>-->
+<!--            &lt;!&ndash; real people should not fill this in and expect good things - do not remove this or risk form bot signups&ndash;&gt;-->
+<!--            <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_5548f33a5336fa3c78babf936_842fad5263" tabindex="-1" value=""></div>-->
+<!--            <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>-->
+<!--          </div>-->
+<!--        </form>-->
+<!--      </div>-->
+
+      <!--End mc_embed_signup-->
+    </div>
+<!--    <div class="row">-->
+<!--      <p>social media</p>-->
+<!--    </div>-->
+  </div>
+<!--  <div class="footer">-->
+<!--    <div class="container"></div>-->
+<!--  </div>-->
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
