add social media

--- a/index.html
+++ b/index.html
@@ -69,9 +69,28 @@
 
       <!--End mc_embed_signup-->
     </div>
-<!--    <div class="row">-->
-<!--      <p>social media</p>-->
-<!--    </div>-->
+    <div class="row">
+      <ul class="rg-list-apps">
+        <li>
+          <a href="https://instagram.com/rgprogra" target="_blank">
+            <img src="img/social/instagram.png" alt="RGProgra Instagram">
+          </a>
+          <span>Instagram</span>
+        </li>
+        <li>
+          <a href="https://facebook.com/rgprogra" target="_blank">
+            <img src="img/social/instagram.png" alt="RGProgra Instagram">
+          </a>
+          <span>Facebook</span>
+        </li>
+        <li>
+          <a href="https://twitter.com/rgprogra" target="_blank">
+            <img src="img/social/instagram.png" alt="RGProgra Instagram">
+          </a>
+          <span>Twitter</span>
+        </li>
+      </ul>
+    </div>
   </div>
 <!--  <div class="footer">-->
 <!--    <div class="container"></div>-->
